@@ -1,90 +1,86 @@
-# Chess – JavaFX
+# Chess – Java Swing
 
-A fully playable two-player chess game built with JavaFX.
+A fully playable two-player chess game using only Java Swing (no JavaFX required).
 
 ## Features
-- Full chess rules (castling, en passant, pawn promotion)
+- Full chess rules — castling, en passant, pawn promotion
 - Check, checkmate & stalemate detection
-- Legal-move highlighting (green squares)
-- King-in-check highlighting (red square)
-- Coordinate labels (a–h / 1–8)
+- Legal-move highlighting (green dots / yellow overlay)
+- King-in-check red glow
+- Board coordinates (a–h / 1–8)
+- Unicode piece fallback if images are missing
 - Play-again prompt on game over
 
 ## Project Structure
 
 ```
-ChessGame/
-├── pom.xml
-└── src/main/
-    ├── java/
-    │   ├── module-info.java
-    │   └── chess/
-    │       ├── ChessApp.java      ← JavaFX Application entry point
-    │       ├── ChessBoard.java    ← UI / rendering / input
-    │       ├── GameLogic.java     ← Move generation, check detection
-    │       ├── Piece.java         ← Piece model
-    │       ├── PieceType.java     ← Enum (KING, QUEEN, …)
-    │       └── Move.java          ← Move record
-    └── resources/
-        ├── chess/
-        │   └── chess.css
-        └── images/               ← ← PUT YOUR PNG FILES HERE
-            ├── blackbishop.png
-            ├── blackhorse.png      (knight)
-            ├── blackking.png
-            ├── blackqueen.png
-            ├── blackrook.png
-            ├── blackpawn.png
-            ├── whitebishop.png
-            ├── whitehorse.png
-            ├── whiteking.png
-            ├── whitequeen.png
-            ├── whiterook.png
-            └── whitepawn.png
+ChessGameSwing/
+├── src/
+│   └── chess/
+│       ├── ChessApp.java          ← main() entry point
+│       ├── ChessFrame.java        ← JFrame wrapper
+│       ├── ChessBoardPanel.java   ← JPanel – all rendering & input
+│       ├── GameLogic.java         ← Rules engine
+│       ├── Piece.java             ← Piece model
+│       ├── PieceType.java         ← Enum
+│       └── Move.java              ← Move record
+└── resources/
+    └── images/                    ← ← PUT YOUR PNG FILES HERE
+        ├── blackbishop.png
+        ├── blackhorse.png          (knight)
+        ├── blackking.png
+        ├── blackqueen.png
+        ├── blackrook.png
+        ├── blackpawn.png
+        ├── whitebishop.png
+        ├── whitehorse.png
+        ├── whiteking.png
+        ├── whitequeen.png
+        ├── whiterook.png
+        └── whitepawn.png
 ```
 
 ## Image Naming Convention
-The code maps piece types to filenames like this:
+| Piece  | Name used |
+|--------|-----------|
+| King   | `king`    |
+| Queen  | `queen`   |
+| Rook   | `rook`    |
+| Bishop | `bishop`  |
+| Knight | `horse`   |  ← matches your blackhorse.png
+| Pawn   | `pawn`    |
 
-| Piece  | Filename suffix |
-|--------|----------------|
-| King   | `king`         |
-| Queen  | `queen`        |
-| Rook   | `rook`         |
-| Bishop | `bishop`       |
-| Knight | `horse`        |  ← matches your "blackhorse.png"
-| Pawn   | `pawn`         |
+Full pattern: `{color}{piece}.png`
 
-Full pattern: `{color}{type}.png`  e.g. `blackhorse.png`, `whiteking.png`
-
-> **Fallback**: If an image file is not found, the piece is drawn using a Unicode chess symbol, so the game still runs without any images.
+> **No images?** The game still runs — pieces are drawn as Unicode chess symbols (♔♕♖♗♘♙).
 
 ## Requirements
-- Java 17+
-- Maven 3.8+
-- JavaFX 21 (pulled automatically by Maven)
+- Java 8 or newer (Swing is built-in — no extra dependencies)
 
-## Run
+## Compile & Run (command line)
 
 ```bash
-# From the ChessGame/ directory:
-mvn javafx:run
+# From ChessGameSwing/
+mkdir -p out
+
+# Compile (include resources on classpath)
+javac -d out -sourcepath src src/chess/ChessApp.java
+
+# Copy resources
+cp -r resources/* out/
+
+# Run
+java -cp out chess.ChessApp
 ```
 
-Or build a fat jar and run:
+## IntelliJ IDEA Setup
+1. Open `ChessGameSwing/` as a new project.
+2. Mark `src/` as **Sources Root**.
+3. Mark `resources/` as **Resources Root**.
+4. Run `chess.ChessApp`.
 
-```bash
-mvn package
-java --module-path <path-to-javafx-sdk>/lib \
-     --add-modules javafx.controls,javafx.fxml \
-     -jar target/chess-javafx-1.0-SNAPSHOT-shaded.jar
-```
-
-## IDE Setup (IntelliJ / Eclipse)
-1. Open as a Maven project.
-2. Ensure the JDK is set to Java 17+.
-3. Run `chess.ChessApp` as the main class.
-4. If JavaFX is not bundled with your JDK, add the JavaFX SDK VM options:
-   ```
-   --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
-   ```
+## Eclipse Setup
+1. Create a new Java Project.
+2. Add `src/` as a source folder.
+3. Add `resources/` as a source folder (so images land on the classpath).
+4. Run `chess.ChessApp`.
